# homework_ws

./: .zshrc.swp  hw5.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/broodje_interfaces/include/broodje_interfaces/broodje_interfaces/msg/: name_number.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp
install/broodje_interfaces/include/broodje_interfaces/broodje_interfaces/msg/detail/: name_number__builder.hpp  name_number__description.c  name_number__functions.h  name_number__rosidl_typesupport_introspection_cpp.hpp  name_number__struct.h  name_number__struct.hpp  name_number__traits.hpp  name_number__type_support.cpp
install/broodje_interfaces/share/broodje_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/broodje_interfaces/share/broodje_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  broodje_interfacesConfig.cmake  broodje_interfaces__rosidl_typesupport_cExport-noconfig.cmake  broodje_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  broodje_interfaces__rosidl_typesupport_cppExport.cmake  broodje_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  broodje_interfaces__rosidl_typesupport_introspection_cExport.cmake  broodje_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_broodje_interfaces__rosidl_generator_cExport.cmake  export_broodje_interfaces__rosidl_generator_cppExport.cmake  export_broodje_interfaces__rosidl_generator_pyExport.cmake  export_broodje_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_broodje_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
install/broodje_interfaces/share/broodje_interfaces/msg/: NameNumber.json
install/hw_pkg/lib/hw_pkg/: hw_2_ex_1  hw_2_ex_2  hw_3-4_ex_1  hw_5_ex_1
install/hw_pkg/share/ament_index/resource_index/parent_prefix_path/: hw_pkg
install/hw_pkg/share/hw_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hw_pkg/share/hw_pkg/cmake/: hw_pkgConfig.cmake
install/les_pkg/share/les_pkg/: local_setup.sh  package.sh
log/: latest_build
src/broodje_interfaces/: CMakeLists.txt  package.xml
src/hw_pkg/: CMakeLists.txt  package.xml
src/hw_pkg/src/: hw_2_ex_1.cpp  hw_2_ex_2.cpp  hw_3-4_ex_1.cpp  hw_3-4_ex_2.cpp  hw_5_ex_1.cpp  hw_5_ex_2.cpp
src/les_pkg/: CMakeLists.txt  package.xml
